syntax = "proto3";

package pb.svc.db;
option go_package = "github.com/byeol-i/battery-level-checker/pb/svc/db";

import "pb/unit/device/device.proto";
import "pb/unit/user/user.proto";
import "pb/unit/common/msg.proto";

service DB {
    rpc AddNewUser(AddNewUserReq) returns (AddNewUserRes);
    rpc AddDevice(AddDeviceReq) returns (AddDeviceRes);
    rpc RemoveDevice(RemoveDeviceReq) returns (RemoveDeviceRes);
    rpc GetDevices(GetDevicesReq) returns (GetDevicesRes);
    rpc GetBattery(GetBatteryReq) returns (GetBatteryRes);
    rpc GetAllBattery(GetAllBatteryReq) returns (GetAllBatteryRes);
    rpc GetUsersAllBatteryLevel(GetUsersAllBatteryLevelReq) returns (GetUsersAllBatteryLevelRes);
    // rpc GetDeviceDetails(GetDeviceDetailsReq) returns (GetDeviceDetailsRes);
    rpc UpdateBatteryLevel(UpdateBatteryLevelReq) returns (UpdateBatteryLevelRes);
}

message GetUsersAllBatteryLevelReq {
    unit.user.UserCredential uid = 1;
}

message GetUsersAllBatteryLevelRes {
    unit.common.ReturnMsg result = 1;
    repeated unit.device.BatteryLevel allBatteryLevel = 2;
    // string error = 2;
}

message GetBatteryReq {
    unit.device.ID deviceId = 1;
    unit.user.UserCredential uid = 2;
}

message GetBatteryRes {
    unit.common.ReturnMsg result = 1;
    unit.device.BatteryLevel batteryLevel = 2;
    // string error = 2;
}

message GetAllBatteryReq {
    unit.device.ID deviceId = 1;
    unit.user.UserCredential uid = 2;
}

message GetAllBatteryRes {
    unit.common.ReturnMsg result = 1;
    repeated unit.device.BatteryLevel allBatteryLevel = 2;
    // string error = 2;
}

message AddNewUserReq {
    unit.user.User user = 1;
}

message AddNewUserRes {
    unit.common.ReturnMsg result = 1;
}

message AddDeviceReq {
    unit.device.Device device = 1;
    string uid = 2;
}

message AddDeviceRes {
    unit.common.ReturnMsg result = 1;
}

message GetDevicesReq {
    unit.user.UserCredential uid = 1;
    // decided send include Spec
    bool detailed = 2;
}

message GetDevicesRes {
    unit.common.ReturnMsg result = 1;
    repeated unit.device.Device devices = 2;
    // string error = 2;
}

message RemoveDeviceReq {
    unit.device.ID deviceId = 1;
    unit.user.UserCredential uid = 2;
}

message RemoveDeviceRes {
    unit.common.ReturnMsg result = 1;
}

message UpdateBatteryLevelReq {
    unit.device.ID deviceId = 1;
    unit.user.UserCredential uid = 2;
    unit.device.BatteryLevel batteryLevel = 3;
}

message UpdateBatteryLevelRes {
    unit.common.ReturnMsg result = 1;
}